--- a/vignettes/fma-vignette.Rmd
+++ b/vignettes/fma-vignette.Rmd
@@ -18,7 +18,8 @@ knitr::opts_chunk$set(
   comment = "#>"
 )
 library(fma)
-library(tidyverse)
+library(ggplot2)
+library(dplyr)
 ```
 
 # Introduction
